March 1st, 2002  ivtools-1.0.2

- add -stdin_off argument to comdraw/flipbook/graphdraw/drawserv to
disable a comterp interpreter on stdin.

- changes required to get things compiling with Cygwin under Windows 2K

- try -gdwarf-2 as a compilation option for debugging with gdb-5.1 and
gcc-3.0.*.  Not sure if there was an improvement.  Maybe this is already
the default.

- fix bug in GraphicLoc tool, where the text wasn't refreshed on subsequent
uses after the dialog box had been unmapped.

- make the "Show Prev Frame" command of flipbook take effect
immediately (same for "Hide Prev Frame").  Needed to call
FrameEditor::UpdateFrame as well as Unidraw::Update.

- fix submitted by E.J. Neafsey (Loyola University) for drawing
multi-point graphics with shift key pressed to make all the lines
either completely horizontal or vertical.  The shift key always
worked, yet the origin used (for limiting motion to the horizontal or
vertical) was never updated to the last vertex as the new points were
added.

- added alpha-transparency to raster display.  It works, but there is
no save/restore of the alpha value, or user interface to set or view
the value.  However, you can use OverlayRasterRect::alphaval() to
set/get the constant (one per raster).  No PostScript output yet as
well.

- propogated "None" background color to all drawing editor's BgColor
menu.

- add an alpha command to comdraw, to set/get the alpha value of a raster
graphic:

	alpha(compview [alphaval]) -- set/get alpha transparency value

a command line like the following will spin a raster forward as it
appears (assume g is a variable pointing to a RasterComp, and the
current selection):

    for(x=0 x<10 x++ alpha(g float(x)/10);rotate(30);scale(1/.9 1/.9);update)

- partial changes for HPUX compilation.  There might be other problems
with the HP linker's desire to fully link a shared library when it is
built, and problems with parameters like ExtraCCFlags that might need